# short-origin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_MODEL.md  LICENSE  README.md  SECURITY.md  completion-todo.txt
.cargo/: config.toml
.githooks/: pre-push
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  governance.toml  security-exceptions.toml
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml  infra.yml  refactor.yml  research.yml
.github/scripts/: detect_changes.sh  publish_component_descriptor.sh
.github/workflows/: ci.yml  delivery-dev.yml  governance.yml  promote-release.yml  release-candidate.yml  security.yml
agents/: README.md
agents/architect_operator/: agent.toml  allowed_actions.toml  output_schema.json
agents/compliance_officer/: agent.toml  allowed_actions.toml  allowed_inputs.toml  output_schema.json
agents/evals/: architect_operator.json  compliance_officer.json  finance_analyst.json  legal_advisor.json  strategist.json
agents/finance_analyst/: agent.toml  allowed_actions.toml  allowed_inputs.toml  output_schema.json
agents/legal_advisor/: agent.toml  allowed_actions.toml  allowed_inputs.toml  output_schema.json
agents/procedures/: README.md  architect.md  code-generator.md  implementation-planner.md  refiner.md  strategist.md  validator.md
agents/runtime/: Cargo.toml
agents/runtime/src/: lib.rs
agents/runtime/tests/: governance.rs
agents/strategist/: agent.toml  allowed_actions.toml  allowed_inputs.toml  output_schema.json
docs/: README.md
docs/adr/: 0001-sovereign-institutional-architecture.md  0002-trust-zones-and-evidence.md  0003-capital-markets-integration.md  0004-wasmcloud-first-ui-shell.md  0005-domain-bounded-platform-topology.md  0006-canonical-event-substrate.md  0007-consistency-semantics-by-criticality.md  0008-domain-owned-data-products-with-contracts.md  0009-lakehouse-open-format-analytical-foundation.md  0010-durable-workflow-execution-plane.md  0011-ai-as-planner-over-typed-tools.md  0012-layered-intelligence-behind-stable-retrieval.md  0013-zero-trust-ai-governance-control-plane.md  0014-observability-slos-and-error-budgets.md  0015-gitops-and-policy-as-code-control-artifacts.md  0016-finops-unit-economics-and-autonomy-budgets.md  0017-replaceable-compute-and-governed-state.md  0018-adopt-quantitative-decision-architecture-for-governed-platform-automation.md  0019-add-meteorological-intelligence-domain-and-weather-products.md  README.md
docs/architecture/: first-principles-implementation-roadmap.md  first-principles-systems-architecture-report.md  layer-boundaries.md  meteorological-intelligence.md  plugin-application-model.md  quantitative-decision-architecture.md  runtime-composition.md
docs/process/: execution-artifacts.md  github-governance-rollout.md  github-workflow-migration.md  issue-architecture-review-2026-03.md  platform-regression-guardrails.md  (+5 more)
enterprise/: README.md
infrastructure/: README.md
plans/: README.md
platform/: README.md
platform/runtime/enforcement/: Cargo.toml
platform/runtime/enforcement/src/: lib.rs
platform/runtime/memory-provider/: Cargo.toml
platform/runtime/memory-provider/src/: lib.rs
schemas/: AGENTS.md  README.md
services/: README.md
services/compliance-service/: Cargo.toml
services/compliance-service/src/: lib.rs
services/evidence-service/: Cargo.toml
services/evidence-service/src/: lib.rs
services/execution-service/: Cargo.toml
services/execution-service/src/: lib.rs
services/finance-service/: Cargo.toml
services/finance-service/src/: component.rs  lib.rs
services/governance-service/: Cargo.toml
services/governance-service/src/: lib.rs
services/identity-service/: Cargo.toml
services/identity-service/src/: lib.rs
services/knowledge-service/: Cargo.toml
services/knowledge-service/src/: lib.rs  weather.rs
services/market-data-service/: Cargo.toml
services/market-data-service/src/: lib.rs
services/meteorological-service/: Cargo.toml
services/meteorological-service/src/: lib.rs
services/policy-service/: Cargo.toml
services/policy-service/src/: lib.rs
services/portfolio-service/: Cargo.toml
services/portfolio-service/src/: lib.rs
services/quant-research-service/: Cargo.toml
services/quant-research-service/src/: lib.rs  weather.rs
services/trading-risk-service/: Cargo.toml
services/trading-risk-service/src/: lib.rs
shared/decision-core/: Cargo.toml
shared/decision-core/src/: engine.rs  game.rs  learned.rs  lib.rs  policy.rs  probabilistic.rs  scores.rs
shared/governed-storage/: Cargo.toml
shared/governed-storage/src/: lib.rs
shared/policy-sdk/: Cargo.toml
shared/policy-sdk/src/: lib.rs
shared/surrealdb-access/: Cargo.toml
shared/surrealdb-access/src/: lib.rs
shared/surrealdb-access/tests/: query_hygiene.rs
shared/telemetry/: Cargo.toml  build.rs
shared/telemetry/src/: bootstrap.rs  lib.rs
shared/trading-core/: Cargo.toml
shared/trading-core/src/: lib.rs
shared/trading-sim/: Cargo.toml
shared/trading-sim/src/: lib.rs
ui/: README.md  logic_audit.md  migration_note.md  verification_report.md
work-items/: README.md
workflows/: README.md
workflows/decision_evaluation/: Cargo.toml
workflows/decision_evaluation/src/: lib.rs
workflows/decision_evaluation/tests/: decision_evaluation.rs
workflows/knowledge_publication/: Cargo.toml
workflows/knowledge_publication/src/: lib.rs
workflows/quant_strategy_promotion/: Cargo.toml
workflows/quant_strategy_promotion/src/: lib.rs
workflows/quant_strategy_promotion/tests/: quant_strategy_promotion.rs
workflows/treasury_disbursement/: Cargo.toml
workflows/treasury_disbursement/src/: component.rs  lib.rs
workflows/treasury_disbursement/tests/: treasury_disbursement.rs
workflows/weather_ingestion/: Cargo.toml
workflows/weather_ingestion/src/: lib.rs
xtask/: AGENTS.md  Cargo.toml  validation.toml
xtask/src/: architecture.rs  common.rs  delivery.rs  github.rs  lib.rs  main.rs  plugin.rs  rust.rs  ui_hardening.rs  validate.rs
(+717 files in other folders)
