[workspace]
resolver = "2"
members = [
  "docs/security-rust/examples/wasm-sandboxing",
  "docs/security-rust/examples/network-security",
  "docs/security-rust/examples/distributed-security",
  "docs/security-rust/examples/infrastructure-hardening",
  "shared/error-model",
  "shared/telemetry",
  "shared/identity",
  "shared/policy-sdk",
  "shared/evidence-sdk",
  "shared/secure-patterns",
  "shared/surrealdb-access",
  "shared/exploit-mitigation",
  "shared/runtime-security",
  "shared/security-instrumentation",
  "shared/trading-errors",
  "shared/trading-core",
  "shared/trading-sim",
  "enterprise/crates/ontology-model",
  "enterprise/crates/policy-registry",
  "enterprise/crates/control-catalog",
  "schemas/crates/contracts",
  "schemas/crates/events",
  "schemas/crates/surrealdb-model",
  "schemas/crates/codegen",
  "platform/runtime/orchestrator",
  "platform/runtime/enforcement",
  "platform/runtime/platform-gateway",
  "platform/runtime/strategy-sandbox",
  "platform/sdk/sdk-rs",
  "platform/wasmcloud/bindings",
  "platform/wasmcloud/component-descriptors",
  "platform/wasmcloud/lattice-config",
  "platform/wasmcloud/smoke-tests",
  "services/governance-service",
  "services/finance-service",
  "services/market-data-service",
  "services/quant-research-service",
  "services/execution-service",
  "services/trading-risk-service",
  "services/portfolio-service",
  "services/legal-service",
  "services/compliance-service",
  "services/audit-service",
  "services/operations-service",
  "services/engineering-service",
  "services/infrastructure-service",
  "services/security-service",
  "services/revenue-service",
  "services/hr-service",
  "services/procurement-service",
  "services/knowledge-service",
  "services/resilience-service",
  "services/identity-service",
  "services/policy-service",
  "services/approval-service",
  "services/risk-service",
  "services/evidence-service",
  "workflows/engine",
  "workflows/payroll",
  "workflows/procurement",
  "workflows/contract_lifecycle",
  "workflows/incident_response",
  "workflows/strategy_review",
  "workflows/policy_exception",
  "workflows/treasury_disbursement",
  "workflows/compliance_attestation",
  "workflows/control_testing",
  "workflows/release_approval",
  "workflows/environment_change",
  "workflows/access_review",
  "workflows/vendor_onboarding",
  "workflows/continuity_activation",
  "workflows/disaster_recovery_test",
  "workflows/quant_strategy_promotion",
  "agents/runtime",
  "ui/crates/shrs_core_headless",
  "ui/crates/system_shell_contract",
  "ui/crates/system_shell",
  "ui/crates/system_ui",
  "ui/crates/platform_host",
  "ui/crates/platform_host_web",
  "ui/crates/dev_console_core",
  "ui/crates/desktop_app_contract",
  "ui/crates/apps/control_center",
  "ui/crates/apps/settings",
  "ui/crates/apps/terminal",
  "ui/crates/dev_console_tui",
  "ui/crates/desktop_runtime",
  "ui/crates/site",
  "ui/crates/desktop_tauri",
  "testing/security-labs/runtime-security",
  "xtask",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
toml = "0.8.23"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["js", "serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
