[workspace]
resolver = "2"
members = [
  "shared/error-model",
  "shared/telemetry",
  "shared/identity",
  "shared/decision-core",
  "shared/policy-sdk",
  "shared/evidence-sdk",
  "shared/governed-storage",
  "shared/surrealdb-access",
  "shared/trading-errors",
  "shared/trading-core",
  "shared/trading-sim",
  "enterprise/crates/ontology-model",
  "enterprise/crates/policy-registry",
  "enterprise/crates/control-catalog",
  "schemas/crates/contracts",
  "schemas/crates/events",
  "schemas/crates/surrealdb-model",
  "schemas/crates/codegen",
  "platform/runtime/orchestrator",
  "platform/runtime/enforcement",
  "platform/runtime/memory-provider",
  "platform/runtime/strategy-sandbox",
  "platform/sdk/sdk-rs",
  "platform/wasmcloud/bindings",
  "platform/wasmcloud/lattice-config",
  "platform/wasmcloud/smoke-tests",
  "services/governance-service",
  "services/finance-service",
  "services/market-data-service",
  "services/quant-research-service",
  "services/execution-service",
  "services/trading-risk-service",
  "services/portfolio-service",
  "services/legal-service",
  "services/compliance-service",
  "services/audit-service",
  "services/operations-service",
  "services/engineering-service",
  "services/infrastructure-service",
  "services/security-service",
  "services/revenue-service",
  "services/hr-service",
  "services/procurement-service",
  "services/knowledge-service",
  "services/resilience-service",
  "services/identity-service",
  "services/policy-service",
  "services/approval-service",
  "services/risk-service",
  "services/evidence-service",
  "services/meteorological-service",
  "workflows/engine",
  "workflows/knowledge_publication",
  "workflows/payroll",
  "workflows/procurement",
  "workflows/contract_lifecycle",
  "workflows/decision_evaluation",
  "workflows/incident_response",
  "workflows/strategy_review",
  "workflows/policy_exception",
  "workflows/treasury_disbursement",
  "workflows/compliance_attestation",
  "workflows/control_testing",
  "workflows/release_approval",
  "workflows/environment_change",
  "workflows/access_review",
  "workflows/vendor_onboarding",
  "workflows/continuity_activation",
  "workflows/disaster_recovery_test",
  "workflows/quant_strategy_promotion",
  "workflows/weather_ingestion",
  "agents/runtime",
  "ui/crates/shrs_core_headless",
  "ui/crates/system_shell_contract",
  "ui/crates/system_shell",
  "ui/crates/system_ui",
  "ui/crates/platform_host",
  "ui/crates/platform_host_web",
  "ui/crates/desktop_app_contract",
  "ui/crates/apps/control_center",
  "ui/crates/apps/settings",
  "ui/crates/apps/terminal",
  "ui/crates/apps/weather",
  "ui/crates/desktop_runtime",
  "ui/crates/site",
  "ui/crates/desktop_tauri",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.32"
hex = "0.4.3"
js-sys = "0.3.91"
jsonschema = "0.45.0"
leptos = { version = "0.8.17", default-features = false }
leptos_meta = { version = "0.8.6", default-features = false }
leptos_router = { version = "0.8.12", default-features = false }
memvid-core = { version = "2.0.138", default-features = false }
nu-ansi-term = { version = "0.50.3", default-features = false }
nu-protocol = { version = "0.110.0", default-features = false }
nu-table = { version = "0.110.0", default-features = false }
quick-xml = "0.39.2"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"
surrealdb = { version = "3.0.3", default-features = false, features = ["kv-mem", "protocol-ws", "rustls"] }
tabled = { version = "0.20.0", default-features = false, features = ["ansi"] }
tauri = { version = "2.10.3", default-features = false }
tauri-build = { version = "2.5.6", default-features = false }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "0.8.23"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["js", "serde", "v4"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
wasmtime = { version = "42.0.1", default-features = false, features = ["cranelift", "runtime", "std"] }
wat = "1.245.1"
web-sys = "0.3.91"
wit-parser = "0.245.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
