[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
finance-service = { path = "../services/finance-service" }
lattice-config = { path = "../platform/wasmcloud/lattice-config" }
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
treasury-disbursement = { path = "../workflows/treasury_disbursement" }
toml.workspace = true

[lints]
workspace = true
