[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
jsonschema.workspace = true
lattice-config = { path = "../platform/wasmcloud/lattice-config" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
