[package]
name = "agent-runtime"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../../shared/error-model" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
error-model = { path = "../../shared/error-model" }
identity = { path = "../../shared/identity" }

[lints]
workspace = true
