[package]
name = "compliance-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../../shared/error-model" }
trading-core = { path = "../../shared/trading-core" }

[lints]
workspace = true
