[package]
name = "identity-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../../shared/error-model" }
identity = { path = "../../shared/identity" }

[lints]
workspace = true
