[package]
name = "market-data-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../../shared/error-model" }
rand.workspace = true
trading-core = { path = "../../shared/trading-core" }
trading-errors = { path = "../../shared/trading-errors" }

[lints]
workspace = true
