[package]
name = "policy-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../../shared/error-model" }
identity = { path = "../../shared/identity" }
policy-sdk = { path = "../../shared/policy-sdk" }

[lints]
workspace = true
