[package]
name = "portfolio-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../../shared/error-model" }
trading-core = { path = "../../shared/trading-core" }
trading-errors = { path = "../../shared/trading-errors" }

[dev-dependencies]
chrono.workspace = true

[lints]
workspace = true
