[package]
name = "trading-risk-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
trading-core = { path = "../../shared/trading-core" }
trading-errors = { path = "../../shared/trading-errors" }

[dev-dependencies]
chrono.workspace = true

[lints]
workspace = true
