[package]
name = "decision-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../error-model" }
identity = { path = "../identity" }
rand.workspace = true

[lints]
workspace = true
