[package]
name = "governed-storage"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../error-model" }
events = { path = "../../schemas/crates/events" }
storage_backend = { package = "surrealdb-access", path = "../surrealdb-access" }

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true

[lints]
workspace = true
