[package]
name = "policy-sdk"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../error-model" }
identity = { path = "../identity" }
uuid.workspace = true

[lints]
workspace = true
