[package]
name = "surrealdb-access"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../error-model" }
events = { path = "../../schemas/crates/events" }
serde.workspace = true
serde_json.workspace = true
surrealdb = { version = "2.2.1", default-features = false, features = ["kv-mem", "protocol-ws"] }
surrealdb-model = { path = "../../schemas/crates/surrealdb-model" }

[dev-dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
identity = { path = "../identity" }
tokio.workspace = true

[lints]
workspace = true
