[package]
name = "surrealdb-access"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
error-model = { path = "../error-model" }
events = { path = "../../schemas/crates/events" }
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
surrealdb-model = { path = "../../schemas/crates/surrealdb-model" }

[dev-dependencies]
chrono.workspace = true
identity = { path = "../identity" }
tokio.workspace = true

[lints]
workspace = true
