[package]
name = "telemetry"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
browser-tracing = ["dep:js-sys", "dep:tracing", "dep:tracing-subscriber", "dep:web-sys"]
native-tracing = ["dep:console-subscriber", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
console-subscriber = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
uuid.workspace = true
web-sys = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
