[package]
name = "decision-evaluation"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
governance-service = { path = "../../services/governance-service" }
error-model = { path = "../../shared/error-model" }

[dev-dependencies]
chrono.workspace = true
identity = { path = "../../shared/identity" }
serde_json.workspace = true

[lints]
workspace = true
