[package]
name = "knowledge-publication"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
enforcement = { path = "../../platform/runtime/enforcement" }
error-model = { path = "../../shared/error-model" }
evidence-sdk = { path = "../../shared/evidence-sdk" }
governed-storage = { path = "../../shared/governed-storage" }
identity = { path = "../../shared/identity" }
knowledge-service = { path = "../../services/knowledge-service" }
memory-provider = { path = "../../platform/runtime/memory-provider" }
orchestrator = { path = "../../platform/runtime/orchestrator" }
policy-sdk = { path = "../../shared/policy-sdk" }

[dev-dependencies]
approval-service = { path = "../../services/approval-service" }
chrono.workspace = true
evidence-service = { path = "../../services/evidence-service" }
policy-service = { path = "../../services/policy-service" }
tempfile.workspace = true
tokio.workspace = true
trading-core = { path = "../../shared/trading-core" }

[lints]
workspace = true
