[package]
name = "enforcement"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
contracts = { path = "../../../schemas/crates/contracts" }
error-model = { path = "../../../shared/error-model" }
evidence-sdk = { path = "../../../shared/evidence-sdk" }
hex.workspace = true
identity = { path = "../../../shared/identity" }
policy-sdk = { path = "../../../shared/policy-sdk" }
serde.workspace = true
sha2.workspace = true
telemetry = { path = "../../../shared/telemetry" }

[lints]
workspace = true
