[package]
name = "memory-provider"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../../schemas/crates/contracts" }
error-model = { path = "../../../shared/error-model" }
memvid-core = { workspace = true, default-features = false, features = ["lex", "pdf_extract", "parallel_segments"] }
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
